<resources>
    <string name="app_name">Tripaja</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location_placeholder">Bali</string>
    <string name="name_placeholder">Hannah Arif</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add_post">Add Post</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="hello_hannah">Hello, Hannah</string>
    <string name="let_s_explore_indonesia">Lets Explore Indonesia</string>
    <string name="search_hint">Search…</string>
    <string name="popular_experiences">Popular Experiences</string>
    <string name="featured">Featured</string>
    <string name="_1523_post">1523 Post</string>
    <string name="hannah_arif">Hannah Arif Traveller</string>
    <string name="traveller_pemula">Traveller Pemula</string>
    <string name="followers">Followers</string>
    <string name="_32">32</string>
    <string name="following">Following</string>
    <string name="jawa_tengah">Jawa Tengah</string>
    <string name="favourite_trip">Favourite Trip</string>
    <string name="bali">Bali</string>
    <string name="trip_posts">Trip Posts</string>
    <string name="trip_interest">Trip Interest</string>
    <string name="history">History</string>
    <string name="user_description">User Description</string>
    <string name="dummy_text">Drain seven ghees, chickpeas, and rum in a large jar over medium heat, cook for a dozen minutes and garnish with some popcorn.</string>
    <string name="trip_services">Trip Services</string>
    <string name="dieng_plateu">Dieng Plateu</string>
    <string name="thursday_28_october_2020">Thursday, 28 October 2020</string>
    <string name="end_30_october_2020">End : 30 October 2020</string>
    <string name="start_27_october_2020">Start : 27 October 2020</string>
    <string name="_7_user_join">7 User Join</string>
    <string name="comment">Comment</string>
    <string name="_12_join">12 Join</string>
    <string name="tripaja">Tripaja</string>
    <string name="login">Login</string>
    <string name="sign_to_continue">Sign to continue</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="welcome">Welcome</string>
    <string name="tripers">Tripers</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="already">Already have an account?</string>
    <string name="register_with_google">Register with Google</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="reset_password">Reset Password</string>
    <string name="or">Or</string>
    <string name="silahkan_login_untuk_mulai_trip">Silahkan login untuk mulai trip</string>
    <string name="halo">Halo</string>
    <string name="atau">atau</string>
    <string name="masuk_dengan_google">Masuk dengan Google</string>
    <string name="buat_post">Buat Post</string>
    <string name="kirim_post">Kirim Post</string>
    <string name="destinasi">Destinasi</string>
    <string name="cari_destinasi">Cari Destinasi</string>
    <string name="deskripsi">Deskripsi ...</string>
    <string name="deskripsi_title">Deskripsi</string>
    <string name="masukan_deskripsi_disini">Masukan deskripsi disini ...</string>
    <string name="_1200_m">1200 M</string>
    <string name="destinasi_tidak_ditemukan">Destinasi Tidak Ditemukan</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="keliling_indonesia">Keliling Indonesia?</string>
    <string name="register_untuk_menggunakan_semua_fitur">Register untuk menggunakan semua fitur</string>
    <string name="username">Username</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="daftar">Daftar</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="register">Register</string>
    <string name="kembali">Kembali</string>
</resources>