<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.auth.LoginActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_90sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher_foreground"
        app:layout_constraintBottom_toTopOf="@+id/tvHalo"
        app:layout_constraintEnd_toEndOf="@+id/edtEmail"
        app:layout_constraintStart_toStartOf="@+id/edtEmail"
        app:layout_constraintTop_toBottomOf="@+id/group3" />

    <TextView
        android:id="@+id/tvHalo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/montserat_bold"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:text="@string/halo"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintBottom_toTopOf="@+id/tvCaption"
        app:layout_constraintEnd_toStartOf="@+id/tvTripers"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />


    <TextView
        android:id="@+id/tvTripers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/montserat_bold"
        android:includeFontPadding="false"
        android:text="@string/tripers"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintBottom_toBottomOf="@+id/tvHalo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvHalo"
        app:layout_constraintTop_toTopOf="@+id/tvHalo" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tvTripers,tvHalo"
        app:layout_constraintBottom_toTopOf="@+id/ivLogo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_32sdp"
        android:fontFamily="@font/gilroy_regular"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:text="@string/silahkan_login_untuk_mulai_trip"
        android:textColor="@color/colorSoftDark"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toTopOf="@+id/edtEmail"
        app:layout_constraintEnd_toEndOf="@+id/edtEmail"
        app:layout_constraintStart_toStartOf="@+id/edtEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvHalo" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_12sdp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="@dimen/_8sdp"
        android:fontFamily="@font/gilroy_bold"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@color/colorSoftDark"
        android:textSize="@dimen/_14ssp"
        app:drawableTint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/edtPassword"
        app:layout_constraintEnd_toEndOf="@+id/edtPassword"
        app:layout_constraintStart_toStartOf="@+id/edtPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvCaption" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_12sdp"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="@dimen/_8sdp"
        android:fontFamily="@font/gilroy_bold"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingVertical="@dimen/_8sdp"
        android:textColor="@color/colorSoftDark"
        android:textSize="@dimen/_14ssp"
        app:drawableTint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:fontFamily="@font/montserat_bold"
        android:paddingVertical="@dimen/_8sdp"
        android:text="@string/login"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toTopOf="@+id/vDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

    <View
        android:id="@+id/vDivider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@color/colorGrey"
        app:layout_constraintBottom_toTopOf="@+id/btnLoginGoogle"
        app:layout_constraintEnd_toEndOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="@id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:fontFamily="@font/gilroy_regular"
        android:includeFontPadding="false"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:text="@string/atau"
        android:textColor="@color/colorSoftDark"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@id/vDivider"
        app:layout_constraintEnd_toEndOf="@id/vDivider"
        app:layout_constraintStart_toStartOf="@id/vDivider"
        app:layout_constraintTop_toTopOf="@id/vDivider" />

    <Button
        android:id="@+id/btnLoginGoogle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorWhite"
        android:fontFamily="@font/gilroy_regular"
        android:paddingVertical="@dimen/_8sdp"
        android:text="@string/masuk_dengan_google"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_11ssp"
        app:icon="@drawable/ic_google"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/vDivider" />

    <RelativeLayout
        android:id="@+id/progressBarLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_add"
        android:padding="@dimen/_8sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>