<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/_6sdp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivProfile"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_4sdp"
        android:ellipsize="end"
        android:fontFamily="@font/gilroy_bold"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:text="@string/hannah_arif"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toTopOf="@+id/tvDate"
        app:layout_constraintStart_toEndOf="@id/ivProfile"
        app:layout_constraintTop_toTopOf="@+id/ivProfile"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:ellipsize="end"
        android:fontFamily="@font/gilroy_regular"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/thursday_28_october_2020"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="@+id/ivProfile"
        app:layout_constraintStart_toStartOf="@id/tvUsername"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

    <ImageView
        android:id="@+id/ivIconLocation"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:padding="@dimen/_6sdp"
        android:src="@drawable/ic_destination"
        app:layout_constraintEnd_toEndOf="@id/ivProfile"
        app:layout_constraintStart_toStartOf="@id/ivProfile"
        app:layout_constraintTop_toBottomOf="@id/ivProfile"
        app:tint="@color/colorFavorite" />

    <TextView
        android:id="@+id/tvDestination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_destination"
        android:ellipsize="end"
        android:fontFamily="@font/gilroy_bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_4sdp"
        android:text="@string/dieng_plateu"
        android:textColor="@color/colorFavorite"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="@id/ivIconLocation"
        app:layout_constraintStart_toStartOf="@id/tvDate"
        app:layout_constraintTop_toTopOf="@id/ivIconLocation" />

    <ImageView
        android:id="@+id/ivIconDate"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:padding="@dimen/_6sdp"
        android:src="@drawable/ic_calender"
        app:layout_constraintEnd_toEndOf="@id/ivProfile"
        app:layout_constraintStart_toStartOf="@id/ivProfile"
        app:layout_constraintTop_toBottomOf="@id/ivIconLocation"
        app:tint="@color/colorDarkBlue" />

    <TextView
        android:id="@+id/tvDateStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_trip_date"
        android:ellipsize="end"
        android:fontFamily="@font/gilroy_bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_4sdp"
        android:text="@string/start_27_october_2020"
        android:textColor="@color/colorDarkBlue"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toTopOf="@+id/tvDateEnd"
        app:layout_constraintStart_toStartOf="@id/tvDate"
        app:layout_constraintTop_toTopOf="@+id/ivIconDate"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvDateEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        android:background="@drawable/bg_trip_date"
        android:ellipsize="end"
        android:fontFamily="@font/gilroy_bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_4sdp"
        android:text="@string/end_30_october_2020"
        android:textColor="@color/colorDarkBlue"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="@+id/ivIconDate"
        app:layout_constraintStart_toStartOf="@id/tvDateStart"
        app:layout_constraintTop_toBottomOf="@+id/tvDateStart" />

    <ImageView
        android:id="@+id/ivUserJoin"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_4sdp"
        android:padding="@dimen/_6sdp"
        android:src="@drawable/ic_people"
        app:layout_constraintBottom_toTopOf="@+id/tvTotalUserJoin"
        app:layout_constraintEnd_toEndOf="@+id/tvTotalUserJoin"
        app:layout_constraintStart_toStartOf="@+id/tvTotalUserJoin"
        app:tint="@color/colorFavorite" />

    <TextView
        android:id="@+id/tvTotalUserJoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@drawable/bg_destination"
        android:ellipsize="end"
        android:fontFamily="@font/gilroy_bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_4sdp"
        android:text="@string/_12_join"
        android:textColor="@color/colorFavorite"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="@+id/tvDateEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvDateStart"
        tools:layout_editor_absoluteX="305dp" />

    <TextView
        android:id="@+id/tvComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:drawablePadding="@dimen/_4sdp"
        android:ellipsize="end"
        android:fontFamily="@font/gilroy_bold"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:paddingVertical="@dimen/_4sdp"
        android:text="@string/comment"
        android:textColor="@color/colorSoftDark"
        android:textSize="@dimen/_12ssp"
        app:drawableStartCompat="@drawable/ic_comment"
        app:drawableTint="@color/colorSoftDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDateEnd" />

</androidx.constraintlayout.widget.ConstraintLayout>